--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/saiyudh/nodejs_application.git"
   },
   "author": "Saiyudh Mannan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/saiyudh/nodejs_application/issues"
   },
