--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,4 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: ./
+        with: 
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       
